# shelf

./: Cargo.toml  Makefile  README.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
src/: argparse.rs  config.rs  git.rs  main.rs  scan.rs  skim_style.rs  tmux.rs  worktree.rs
src/cmd/: gitjump.rs  project.rs  worktree.rs
src/cmd/gitjump/: build_targets.rs  mod.rs
src/cmd/project/: project_dir.rs
