[package]
name = "shelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version = "3.2", features = ["derive", "cargo"]}
color-backtrace = { version = "0.5" }
pretty_env_logger = "0.4"
log = "0.4"
anyhow = "1"

skim = "0.10.1"
walkdir = "2.3.2"
regex = "1.6.0"
terminal_size = "0.2.3"
ansi_term = "0.12.1"

git2 = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
directories = "4.0.1"
chrono = "0.4.23"
