[package]
name = "shelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = {version = "3.2", features = ["derive", "cargo"]}
color-backtrace = { version = "0.6" }
pretty_env_logger = "0.5"
log = "0.4"
anyhow = "1"

skim = "0.10.4"
walkdir = "2.4.0"
regex = "1.10.0"
terminal_size = "0.3.0"
ansi_term = "0.12.1"

git2 = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
directories = "5.0"
chrono = "0.4.23"


[dev-dependencies]
tempfile = "3"
